--- a/CRR/model/Modeling.ipynb
+++ b/CRR/model/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer_df = pd.read_csv('/Users/a1111/Desktop/group_project/CRR/db/Customer.csv')\n",
-    "order_df = pd.read_csv('/Users/a1111/Desktop/group_project/CRR/db/Order.csv')\n",
-    "product_df = pd.read_csv('/Users/a1111/Desktop/group_project/CRR/db/Product.csv')"
+    "customer_df = pd.read_csv('../db/Customer.csv')\n",
+    "order_df = pd.read_csv('../db/Order.csv')\n",
+    "product_df = pd.read_csv('../db/Product.csv')"
    ]
   },
   {
@@ -250,13 +250,6 @@
     "\n",
     "cluster_distribution, features_df_train.groupby('Cluster').mean()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
