Adding Cluster names and respective marketing solutions.

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -36,390 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Recency</th>\n",
-       "      <th>Frequency</th>\n",
-       "      <th>Monetary</th>\n",
-       "      <th>R_Score</th>\n",
-       "      <th>F_Score</th>\n",
-       "      <th>M_Score</th>\n",
-       "      <th>RFM_Score</th>\n",
-       "      <th>Cluster</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>PhoneNumber</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Married</th>\n",
-       "      <th>OrderID</th>\n",
-       "      <th>OrderDate</th>\n",
-       "      <th>ProductID</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>ProductName</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>81.60</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>411</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27</td>\n",
-       "      <td>001-469-394-5438x4326</td>\n",
-       "      <td>978 Mike Prairie\\nEast Andrew, MI 86590</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1773</td>\n",
-       "      <td>2024-04-20</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Responsibility</td>\n",
-       "      <td>40.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>392.68</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>311</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>47</td>\n",
-       "      <td>(918)681-5656x5608</td>\n",
-       "      <td>97734 Krista Village\\nLake Deniseborough, VI 9...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>132</td>\n",
-       "      <td>2024-04-09</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Letter</td>\n",
-       "      <td>75.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>392.68</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>311</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>47</td>\n",
-       "      <td>(918)681-5656x5608</td>\n",
-       "      <td>97734 Krista Village\\nLake Deniseborough, VI 9...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>390</td>\n",
-       "      <td>2024-04-18</td>\n",
-       "      <td>25</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Short</td>\n",
-       "      <td>17.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>167.82</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>411</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53</td>\n",
-       "      <td>(558)414-7857x62981</td>\n",
-       "      <td>5103 Pugh Branch\\nTonyaland, OH 67379</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2024-04-20</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Those</td>\n",
-       "      <td>21.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>167.82</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>411</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53</td>\n",
-       "      <td>(558)414-7857x62981</td>\n",
-       "      <td>5103 Pugh Branch\\nTonyaland, OH 67379</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>141</td>\n",
-       "      <td>2024-04-14</td>\n",
-       "      <td>46</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Arm</td>\n",
-       "      <td>12.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1995</th>\n",
-       "      <td>488</td>\n",
-       "      <td>500</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2211.15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>342</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>+1-432-556-3063x7795</td>\n",
-       "      <td>998 Henry Islands Suite 357\\nNew Mathew, NY 01366</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>261</td>\n",
-       "      <td>2023-08-02</td>\n",
-       "      <td>29</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Almost</td>\n",
-       "      <td>35.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1996</th>\n",
-       "      <td>488</td>\n",
-       "      <td>500</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2211.15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>342</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>+1-432-556-3063x7795</td>\n",
-       "      <td>998 Henry Islands Suite 357\\nNew Mathew, NY 01366</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>911</td>\n",
-       "      <td>2024-04-10</td>\n",
-       "      <td>26</td>\n",
-       "      <td>10</td>\n",
-       "      <td>High</td>\n",
-       "      <td>42.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997</th>\n",
-       "      <td>488</td>\n",
-       "      <td>500</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2211.15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>342</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>+1-432-556-3063x7795</td>\n",
-       "      <td>998 Henry Islands Suite 357\\nNew Mathew, NY 01366</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1092</td>\n",
-       "      <td>2023-06-11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Town</td>\n",
-       "      <td>49.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1998</th>\n",
-       "      <td>488</td>\n",
-       "      <td>500</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2211.15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>342</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>+1-432-556-3063x7795</td>\n",
-       "      <td>998 Henry Islands Suite 357\\nNew Mathew, NY 01366</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1233</td>\n",
-       "      <td>2023-06-27</td>\n",
-       "      <td>28</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Serve</td>\n",
-       "      <td>8.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1999</th>\n",
-       "      <td>488</td>\n",
-       "      <td>500</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2211.15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>342</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50</td>\n",
-       "      <td>+1-432-556-3063x7795</td>\n",
-       "      <td>998 Henry Islands Suite 357\\nNew Mathew, NY 01366</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1258</td>\n",
-       "      <td>2023-09-15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Letter</td>\n",
-       "      <td>75.77</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2000 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Unnamed: 0  CustomerID  Recency  Frequency  Monetary  R_Score  F_Score  \\\n",
-       "0              0           1        7          1     81.60        4        1   \n",
-       "1              1           2        9          2    392.68        3        1   \n",
-       "2              1           2        9          2    392.68        3        1   \n",
-       "3              2           3        7          3    167.82        4        1   \n",
-       "4              2           3        7          3    167.82        4        1   \n",
-       "...          ...         ...      ...        ...       ...      ...      ...   \n",
-       "1995         488         500       16          7   2211.15        3        4   \n",
-       "1996         488         500       16          7   2211.15        3        4   \n",
-       "1997         488         500       16          7   2211.15        3        4   \n",
-       "1998         488         500       16          7   2211.15        3        4   \n",
-       "1999         488         500       16          7   2211.15        3        4   \n",
-       "\n",
-       "      M_Score  RFM_Score  Cluster  ... Age            PhoneNumber  \\\n",
-       "0           1        411        2  ...  27  001-469-394-5438x4326   \n",
-       "1           1        311        2  ...  47     (918)681-5656x5608   \n",
-       "2           1        311        2  ...  47     (918)681-5656x5608   \n",
-       "3           1        411        2  ...  53    (558)414-7857x62981   \n",
-       "4           1        411        2  ...  53    (558)414-7857x62981   \n",
-       "...       ...        ...      ...  ...  ..                    ...   \n",
-       "1995        2        342        4  ...  50   +1-432-556-3063x7795   \n",
-       "1996        2        342        4  ...  50   +1-432-556-3063x7795   \n",
-       "1997        2        342        4  ...  50   +1-432-556-3063x7795   \n",
-       "1998        2        342        4  ...  50   +1-432-556-3063x7795   \n",
-       "1999        2        342        4  ...  50   +1-432-556-3063x7795   \n",
-       "\n",
-       "                                                Address  Married OrderID  \\\n",
-       "0               978 Mike Prairie\\nEast Andrew, MI 86590      Yes    1773   \n",
-       "1     97734 Krista Village\\nLake Deniseborough, VI 9...      Yes     132   \n",
-       "2     97734 Krista Village\\nLake Deniseborough, VI 9...      Yes     390   \n",
-       "3                 5103 Pugh Branch\\nTonyaland, OH 67379      Yes      46   \n",
-       "4                 5103 Pugh Branch\\nTonyaland, OH 67379      Yes     141   \n",
-       "...                                                 ...      ...     ...   \n",
-       "1995  998 Henry Islands Suite 357\\nNew Mathew, NY 01366      Yes     261   \n",
-       "1996  998 Henry Islands Suite 357\\nNew Mathew, NY 01366      Yes     911   \n",
-       "1997  998 Henry Islands Suite 357\\nNew Mathew, NY 01366      Yes    1092   \n",
-       "1998  998 Henry Islands Suite 357\\nNew Mathew, NY 01366      Yes    1233   \n",
-       "1999  998 Henry Islands Suite 357\\nNew Mathew, NY 01366      Yes    1258   \n",
-       "\n",
-       "       OrderDate ProductID  Quantity     ProductName  Price  \n",
-       "0     2024-04-20        31         2  Responsibility  40.80  \n",
-       "1     2024-04-09         1         4          Letter  75.77  \n",
-       "2     2024-04-18        25         5           Short  17.92  \n",
-       "3     2024-04-20        11         1           Those  21.36  \n",
-       "4     2024-04-14        46         5             Arm  12.96  \n",
-       "...          ...       ...       ...             ...    ...  \n",
-       "1995  2023-08-02        29        10          Almost  35.97  \n",
-       "1996  2024-04-10        26        10            High  42.17  \n",
-       "1997  2023-06-11         2         7            Town  49.27  \n",
-       "1998  2023-06-27        28         7           Serve   8.67  \n",
-       "1999  2023-09-15         1         6          Letter  75.77  \n",
-       "\n",
-       "[2000 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -445,6 +61,45 @@
    ],
    "source": [
     "RiskLevelPlot(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Customer Clusters Analysis and Marketing Solutions\n",
+    "\n",
+    "## Cluster 0: Engaged Regulars\n",
+    "- **Profile Description:** Regular customers with recent interactions and moderate spending.\n",
+    "- **Marketing Solutions:**\n",
+    "  - **Loyalty Rewards:** Introduce loyalty points or discounts for frequent purchases to encourage continued engagement.\n",
+    "  - **Personalized Communication:** Use personalized email or SMS marketing to remind them of new products or services.\n",
+    "\n",
+    "## Cluster 1: Dormant High-Value\n",
+    "- **Profile Description:** High-value customers, not the most recent visitors but high spenders.\n",
+    "- **Marketing Solutions:**\n",
+    "  - **Re-engagement Campaigns:** Create targeted campaigns offering special discounts or exclusive access to new products to re-engage these customers.\n",
+    "  - **Customer Feedback:** Reach out for feedback to understand their needs and improve their customer journey.\n",
+    "\n",
+    "## Cluster 2: Casual Newcomers\n",
+    "- **Profile Description:** Infrequent, lower-spending customers with recent interactions.\n",
+    "- **Marketing Solutions:**\n",
+    "  - **First-Time Buyer Offers:** Encourage a second purchase through introductory offers or a thank-you discount after their first purchase.\n",
+    "  - **Engagement Programs:** Introduce them to an engagement program that educates about the brand’s values and benefits.\n",
+    "\n",
+    "## Cluster 3: Elite Enthusiasts\n",
+    "- **Profile Description:** Very active, high-spending customers with frequent interactions.\n",
+    "- **Marketing Solutions:**\n",
+    "  - **Exclusive Membership:** Offer an exclusive membership or VIP status that includes premium services and products.\n",
+    "  - **Special Events:** Invite them to special events or product launches, making them feel valued and part of the brand’s community.\n",
+    "\n",
+    "## Cluster 4: Sporadic Spenders\n",
+    "- **Profile Description:** Infrequent visitors who spend moderately but interact rarely.\n",
+    "- **Marketing Solutions:**\n",
+    "  - **Win-Back Strategies:** Implement win-back strategies such as reactivation emails with offers tailored to their previous purchasing history.\n",
+    "  - **Survey and Feedback:** Conduct surveys to understand their disengagement reasons and tailor communications to address these areas.\n",
+    "\n",
+    "These strategies should help each cluster feel more valued and understood, potentially decreasing churn rates by increasing customer satisfaction and loyalty.\n"
    ]
   },
   {
