--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,12 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from CRR.model.plots import plot_rfm_distributions, cluster_p, age_dist_per_cluster, rfm_plots, RiskLevelPlot\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChurnRate.csv\n",
+      "Customer.csv\n",
+      "Modeling.csv\n",
+      "Order.csv\n",
+      "Product.csv\n",
+      "Customer_RFM_Clusters.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapping={\n",
+    " 'ChurnRate.csv':'ChurnRate',\n",
+    "\n",
+    "\n",
+    "}\n",
+    "\n",
+    "\n",
+    "from CRR.db.data_generator import data_ingestion\n",
+    "\n",
+    "def data_ingestion(path:str,mapping:dict):\n",
+    "    files= glob.glob(f'{path}/*.csv')\n",
+    "    for i in files:\n",
+    "        print(f'trying to ingest {os.path.basename(i)}')\n",
+    "\n",
+    "        print(os.path.basename(i))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -348,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
